rust/foxglove/src/protocol/common/client/snapshots/foxglove__protocol__common__client__playback_control_request__tests__encode_play.snap
---
source: rust/foxglove/src/protocol/common/client/playback_control_request.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x07,
    0x00,
    0x00,
    0x00,
    0x73,
    0x6f,
    0x6d,
    0x65,
    0x2d,
    0x69,
    0x64,
]
